            Modified: Increase the maximum length of keyboard button texts from 19 to 22
            Modified: Increase the width for keyboard buttons and texts by 2 px (so as not to waste space)
            Modified: Enable the edited text to spread wider, so that there is the same spacing to the left and right
            Fixed: Potential string overflow (OSDMenuKeyboard_StringVar)
            Modified: Don't return a space character for empty keys
            Fixed: Reset KeyPadMode to its default when initializing the keyboard
            Added: OSDMenuKeyboard_ChangeKeypad() to change or suppress keypads (except Standard and CAPS)
            Added: OSDMenuKeyboard_SetKeypadMode() to change the default starting keypad mode
            Fixed: Align keyboard title horizontally and vertically centered (2 px to the left and 3 px up)
            Fixed: Align key descriptions centered (1 px to the right)
            Fixed: Align keyboard text and cursor centered (2 px up)
            Added: OSDMenuKeyboard_SetCursor() to change the cursor type
            Added: OSDMenuKeyboard_AutomaticLowerCase() to automatically change to standard keypad mode after entering an upper-case character
            Modified: Replace three dots "..." by UTF-8 horizontal ellipsis character
            Modified: StrMkUTF8() has now an additional parameter "size" and writes at most "size" bytes (including the terminating null byte) to SourceString
            Fixed: Wrong use of MAX_FILE_NAME_SIZE (which in fact is the max. string length of a file name)
            Fixed: Prevent ValidFileName() from missing MAX_FILE_NAME_SIZE and looping over whole strName with UTF-8 characters
            Added: HDD_GetFileDir() which got lost when converting to TMS only code
            Modified: Make constant parameters of the functions in elf, hdd, tap, TMSOSDKeyboard, TMSOSDMenu, rec and string const
            Modified: Release date
2019-12-12  Fixed: isMJD() had a year 2020 problem